# capyt

./: .gitignore  LICENSE  LICENSE.md  MANIFEST.in  README.md  capyt.py  pyproject.toml  setup.py
capyt/: __init__.py  capyt.py
