[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capyt"
version = "1.2"
description = "A python3 CLI utility to interface with cpy.pt"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Laura Batalha"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2",
]

[project.scripts]
capyt = "capyt.capyt:main"


[tool.hatch.build.targets.wheel]
packages = ["capyt"]

[tool.hatch.build.targets.sdist]
include = ["/capyt"]
